--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h4>
         To celebrate Spense's lounch, we will be waiving all fees for the entire
         month of April.
-        <a href="#">You will be receiving 100% of the earning</a>
+        <a href="#">You will be receiving 100% of the earning.</a>
       </h4>
     </header>
     <div class="container">
