--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>spense</title>
-    <link rel="stylesheet" href="css/brands.css" />
+    <link
+      rel="stylesheet"
+      href="css/brands.
+    css"
+    />
+    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="css/fontawesome.css" />
     <link rel="stylesheet" href="null/style.css" />
   </head>
   <body>
@@ -98,6 +104,26 @@
       </div>
     </div>
 
+    <!-- article -->
+    <article>
+      <div class="detail">
+        <div class="text">
+          <h2>Secure your money with Escrow.</h2>
+          <p>
+            Spense uses Escrow to secure all payment. We brllive Escrow offers
+            the highes level of security for your payments, so you never need to
+            worry about scams.
+          </p>
+          <a href="#">
+            Learn more about Escrow <i class="fa fa-arrow-right-long"></i>
+          </a>
+        </div>
+        <div class="image">
+          <img src="Assets/Phone Mockup (Desktop).png" alt="" />
+        </div>
+      </div>
+    </article>
+
     <script>
       const toggleButton = document.getElementsByClassName("toggle-button")[0];
       const navLink = document.getElementsByClassName("navlink")[0];
@@ -109,5 +135,7 @@
       });
     </script>
     <script src="js/brands.js"></script>
+    <script src="js/all.js"></script>
+    <script src="js/fontawesome.js"></script>
   </body>
 </html>
