last content selesai

--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@
       </div>
     </article>
 
+    <!-- last content -->
+    <section>
+      <div class="content">
+        <div class="frame">
+          <img src="Assets/Text Editor.png" alt="" class="pic" />
+        </div>
+        <div class="describe">
+          <h1>A text editor like no other.</h1>
+          <p>
+            Our text editor pulls you into focus mode with it's simplistic
+            design and usability so you can put out your best writings.
+          </p>
+          <a href="#" class="demo"
+            >Text Editor Live Demo <i class="fa fa-arrow-right-long"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+
     <script>
       const toggleButton = document.getElementsByClassName("toggle-button")[0];
       const navLink = document.getElementsByClassName("navlink")[0];
