--- a/index.html
+++ b/index.html
@@ -143,6 +143,52 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <footer>
+      <div class="end">
+        <div class="brand">
+          <span>spense.</span>
+          <p>
+            Spense is an open platform for individuals to share their unfiltered
+            thoughts. Discuss the topic you love, end get paid for doing
+            <i>just</i> that.
+          </p>
+        </div>
+        <div class="left">
+          <div class="nav nav1">
+            <strong>Sitemap</strong>
+            <ul>
+              <li><a href="#">Homepage</a></li>
+            </ul>
+          </div>
+          <div class="nav nav2">
+            <strong>Resources</strong>
+            <ul>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="right">
+          <div class="nav nav3">
+            <strong>Company</strong>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Customers</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+          <div class="nav nav4">
+            <strong>Opportunities</strong>
+            <ul>
+              <li><a href="#">Jobs</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script>
       const toggleButton = document.getElementsByClassName("toggle-button")[0];
       const navLink = document.getElementsByClassName("navlink")[0];
